# marketing_fox

./: .dockerignore  .env.example  .env.test.example  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.web  Makefile  README.md  compose.test.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json
.github/workflows/: publish-test-images.yml
.local/xhs-profile/: Local State
.local/xhs-profile/Default/: Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
.local/xhs-profile/GrShaderCache/: data_1  index
.local/xhs-profile/GraphiteDawnCache/: data_0  data_1  data_2  index
.local/xhs-profile/ShaderCache/: data_1  index
.local/xhs-profile/segmentation_platform/: ukm_db
deploy/nginx/: marketing_fox-test.conf.example
deploy/test/: deploy.sh
docs/: OPERATIONS-test.md  architecture.md  product-scope.md  publishing-operator-contract.md  roadmap.md  service-api-contract.md  sls-logging.md  xiaohongshu-login-strategy.md
scripts/docker/: api-entrypoint.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: login-form.tsx  xhs-console.tsx
src/lib/: xhs-console-state.ts
src/ts/: api-server.ts  index.ts  web-server.ts
tests/python/: test_publishing_drafting.py  test_publishing_runner.py  test_wechat_connector.py  test_x_connector.py  test_xiaohongshu_connector.py  test_xiaohongshu_session.py
tests/ts/: api-service.test.ts  api-support.test.ts  logger.test.ts  publishing.test.ts  xhs-console.test.ts
(+696 files in other folders)
