[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "marketing-fox"
version = "0.1.0"
description = "Personal marketing agent analytics package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.53.0",
  "tweepy>=4.15.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
marketing-fox-py = "marketing_fox.main:main"
marketing-fox-publish = "marketing_fox.publishing.runner:main"
marketing-fox-xhs-session = "marketing_fox.publishing.xiaohongshu_session:main"

[tool.hatch.build.targets.wheel]
packages = ["src/python/marketing_fox"]

[tool.pytest.ini_options]
pythonpath = ["src/python"]
